Added links to the footer

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 
 <body>
   <h1>Welcome to the Weather Forcast</h1>
+  <footer>
+    Coded by <a href="https://github.com/Skyelene" target="_blank">Rachel Buday,</a> hosted on <a
+      href="https://wettervorhersage-shecodes.netlify.app/" target="_blank">Netlify</a> and on <a
+      href="https://github.com/Skyelene/weather-forecast" target="_blank">GitHub</a>.
+  </footer>
 </body>
-<footer>
-  Coded by Rachel Buday, hosted on Netlify and is on GitHub.
-</footer>
 
 </html>
