--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
   <h1>Welcome to the Weather Forcast</h1>
   <footer>
-    Coded by <a href="https://github.com/Skyelene" target="_blank">Rachel Buday,</a> hosted on <a
-      href="https://wettervorhersage-shecodes.netlify.app/" target="_blank">Netlify</a> and on <a
-      href="https://github.com/Skyelene/weather-forecast" target="_blank">GitHub</a>.
+    Coded by <a href="https://github.com/Skyelene" target="_blank">Rachel Buday,</a> open sourced on <a
+      href="https://github.com/Skyelene/weather-forecast" target="_blank">GitHub</a> and hosted on <a
+      href="https://wettervorhersage-shecodes.netlify.app/" target="_blank">Netlify</a>.
   </footer>
 </body>
 
