--- a/index.html
+++ b/index.html
@@ -8,7 +8,26 @@
 </head>
 
 <body>
-  <h1>Welcome to the Weather Forcast</h1>
+  <header>
+    <form>
+      <input type="search" placeholder="Enter a City..." required>
+      <input type="submit" value="Search">
+    </form>
+  </header>
+
+  <main>
+    <div>
+      <h1>Budapest</h1>
+      <p>
+        Monday 11:55, overcast
+        <br>
+        Humidity: 61%, Wind: 13km/h
+      </p>
+    </div>
+    <div>
+      ☁️ 1°C
+    </div>
+  </main>
   <footer>
     Coded by <a href="https://github.com/Skyelene" target="_blank">Rachel Buday,</a> open sourced on <a
       href="https://github.com/Skyelene/weather-forecast" target="_blank">GitHub</a> and hosted on <a
