Styled main container & added custom font

--- a/index.html
+++ b/index.html
@@ -4,35 +4,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="src/index.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Salsa&display=swap" rel="stylesheet">
   <title>Weather Forcast</title>
 </head>
 
 <body>
-  <header>
-    <form>
-      <input type="search" placeholder="Enter a City..." required>
-      <input type="submit" value="Search">
-    </form>
-  </header>
+  <div class="weather-app">
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a City..." required>
+        <input type="submit" value="Search">
+      </form>
+    </header>
 
-  <main>
-    <div>
-      <h1>Budapest</h1>
-      <p>
-        Monday 11:55, overcast
-        <br>
-        Humidity: 61%, Wind: 13km/h
-      </p>
-    </div>
-    <div>
-      ☁️ 1°C
-    </div>
-  </main>
-  <footer>
-    Coded by <a href="https://github.com/Skyelene" target="_blank">Rachel Buday,</a> open sourced on <a
-      href="https://github.com/Skyelene/weather-forecast" target="_blank">GitHub</a> and hosted on <a
-      href="https://wettervorhersage-shecodes.netlify.app/" target="_blank">Netlify</a>.
-  </footer>
+    <main>
+      <div>
+        <h1>Budapest</h1>
+        <p>
+          Monday 11:55, overcast
+          <br>
+          Humidity: 61%, Wind: 13km/h
+        </p>
+      </div>
+      <div>
+        ☁️ 1°C
+      </div>
+    </main>
+    <footer>
+      Coded by <a href="https://github.com/Skyelene" target="_blank">Rachel Buday,</a> open sourced on <a
+        href="https://github.com/Skyelene/weather-forecast" target="_blank">GitHub</a> and hosted on <a
+        href="https://wettervorhersage-shecodes.netlify.app/" target="_blank">Netlify</a>.
+    </footer>
+  </div>
 </body>
 
 </html>
