--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="src/index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Salsa&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet" />
   <title>Weather Forcast</title>
 </head>
 
@@ -17,29 +17,35 @@
   <div class="weather-app">
     <header>
       <form>
-        <input type="search" placeholder="Enter a City..." required>
-        <input type="submit" value="Search">
+        <input type="search" placeholder="Enter a City..." required class="search-form-input">
+        <input type="submit" value="Search" class="search-form-button">
       </form>
     </header>
-
+    <form class="search-form"></form>
     <main>
-      <div>
-        <h1>Budapest</h1>
-        <p>
-          Monday 11:55, overcast
-          <br>
-          Humidity: 61%, Wind: 13km/h
-        </p>
+      <div class="weather-app-data">
+        <div>
+          <h1 class="weather-app-city">Budapest</h1>
+          <p class="weather-app-details">
+            Monday 11:55, overcast
+            <br>
+            Humidity: <strong>61%</strong>, Wind: <strong>13km/h</strong>
+          </p>
+        </div>
+        <div class="weather-app-temperature-container">
+          <div class="weather-app-icon">☁️</div>
+          <div class="weather-app-temperature">1</div>
+          <div class="weather-app-unit">°C</div>
+        </div>
       </div>
-      <div>
-        ☁️ 1°C
-      </div>
-    </main>
-    <footer>
-      Coded by <a href="https://github.com/Skyelene" target="_blank">Rachel Buday,</a> open sourced on <a
-        href="https://github.com/Skyelene/weather-forecast" target="_blank">GitHub</a> and hosted on <a
-        href="https://wettervorhersage-shecodes.netlify.app/" target="_blank">Netlify</a>.
-    </footer>
+  </div>
+  </main>
+
+  <footer>
+    Coded by <a href="https://github.com/Skyelene" target="_blank">Rachel Buday,</a> open sourced on <a
+      href="https://github.com/Skyelene/weather-forecast" target="_blank">GitHub</a> and hosted on <a
+      href="https://wettervorhersage-shecodes.netlify.app/" target="_blank">Netlify</a>.
+  </footer>
   </div>
 </body>
 
