--- a/index.html
+++ b/index.html
@@ -16,16 +16,15 @@
 <body>
   <div class="weather-app">
     <header>
-      <form>
-        <input type="search" placeholder="Enter a City..." required class="search-form-input">
+      <form class="search-form" id="search-form">
+        <input type="search" placeholder="Enter a City..." required id="search-form-input" class="search-form-input">
         <input type="submit" value="Search" class="search-form-button">
       </form>
     </header>
-    <form class="search-form"></form>
     <main>
       <div class="weather-app-data">
         <div>
-          <h1 class="weather-app-city">Budapest</h1>
+          <h1 class="weather-app-city" id="city">Budapest</h1>
           <p class="weather-app-details">
             Monday 11:55, overcast
             <br>
@@ -47,6 +46,7 @@
       href="https://wettervorhersage-shecodes.netlify.app/" target="_blank">Netlify</a>.
   </footer>
   </div>
+  <script src="src/index.js"></script>
 </body>
 
 </html>
