Injected more weather data

--- a/index.html
+++ b/index.html
@@ -27,25 +27,26 @@
         <div>
           <h1 class="weather-app-city" id="city"></h1>
           <p class="weather-app-details">
-            Monday 11:55, overcast
-            <br>
-            Humidity: <strong>61%</strong>, Wind: <strong>13km/h</strong>
+            <span id="time"></span>,
+            <span id="description"></span>
+            <br />
+            Humidity: <strong id="humidity"></strong>, Wind:
+            <strong id="wind-speed"></strong>
           </p>
         </div>
         <div class="weather-app-temperature-container">
-          <div class="weather-app-icon">☁️</div>
+          <div id="icon"></div>
           <div class="weather-app-temperature" id="temperature"></div>
           <div class="weather-app-unit">°C</div>
         </div>
       </div>
-  </div>
-  </main>
+    </main>
 
-  <footer>
-    Coded by <a href="https://github.com/Skyelene" target="_blank">Rachel Buday,</a> open sourced on <a
-      href="https://github.com/Skyelene/weather-forecast" target="_blank">GitHub</a> and hosted on <a
-      href="https://wettervorhersage-shecodes.netlify.app/" target="_blank">Netlify</a>.
-  </footer>
+    <footer>
+      Coded by <a href="https://github.com/Skyelene" target="_blank">Rachel Buday,</a> open sourced on <a
+        href="https://github.com/Skyelene/weather-forecast" target="_blank">GitHub</a> and hosted on <a
+        href="https://wettervorhersage-shecodes.netlify.app/" target="_blank">Netlify</a>.
+    </footer>
   </div>
   <script src="src/index.js"></script>
 </body>
