--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <div class="weather-app">
     <header>
       <form class="search-form" id="search-form">
-        <input type="search" placeholder="Enter a City..." required id="search-form-input" class="search-form-input">
-        <input type="submit" value="Search" class="search-form-button">
+        <input type="search" placeholder="Enter a city.." required id="search-form-input" class="search-form-input" />
+        <input type="submit" value="Search" class="search-form-button" />
       </form>
     </header>
     <main>
@@ -40,9 +40,7 @@
           <div class="weather-app-unit">°C</div>
         </div>
       </div>
-      <div class="weather-forecast" id="forecast">
-
-      </div>
+      <div class="weather-forecast" id="forecast"></div>
     </main>
 
     <footer>
